feat: add home translation for bottom nav

--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -9,7 +9,8 @@
     "back": "Voltar",
     "loading": "Carregando...",
     "error": "Erro",
-    "success": "Sucesso"
+    "success": "Sucesso",
+    "home": "Home"
   },
   "app": {
     "name": "Capital",
